Bug 1966569 - Stop using the standardized `click` target if it's caused by a tap r=smaug

Pointer Events spec implies that the source event of `click` is the preceding
`pointerup` unless it's caused by keyboard or script and that defines the
`click` event target should be the `pointerup` event target if the pointer is
captured either explicitly or implicitly.  However, when it's caused by a tap,
Chrome does not use the `pointerup` target as the `click` event target.  For
now, we should align the behavior to Chrome because we got a web-compat issue on
Phabricator.

So, the `click` caused by a touch will target to the closest common ancestor
of the compatibility `mousedown` and `mouseup` events.

Differential Revision: https://phabricator.services.mozilla.com/D249877